--- a/personalcrm/quote/templates/quote/layout.html
+++ b/personalcrm/quote/templates/quote/layout.html
@@ -48,13 +48,14 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Sign Out</a>
                 </li>
+              {% else %}
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Sign In</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Sign Up</a>
+                </li>
               {% endif %}
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sign In</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
-              </li>
             </div>
           </uls>
         </div>
