--- a/personalcrm/quote/templates/quote/quote_index.html
+++ b/personalcrm/quote/templates/quote/quote_index.html
@@ -2,4 +2,5 @@
 
 {% block body %}
     <h1>test index</h1>
+    <button type="button "id="new_quote_button">New Quote</button>
 {% endblock body %}
