--- a/personalcrm/quote/static/quote/css/main.css
+++ b/personalcrm/quote/static/quote/css/main.css
@@ -1,4 +1,10 @@
 .discount-column {
+  /* display: flex;
+  height: max-content;
+  vertical-align: middle; */
+}
+
+#general-info {
   display: flex;
-  vertical-align: middle;
+  flex-wrap: wrap;
 }
