--- a/personalcrm/quote/templates/quote/create-quote.html
+++ b/personalcrm/quote/templates/quote/create-quote.html
@@ -3,30 +3,36 @@
 {% block body %}
     <h1>Create Quote</h1>
     <form id="new-quote-form" action="" method="post">
-        <div class="form-group">
-            <label for="companySelect">Company:</label>
-            <select class="form-control" id="companySelect">
-                {% for company in company_options %}
-                <option>{{ company }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="reference">Reference #:</label>
-            <input type="text" class="form-control" id="reference" placeholder="">
-        </div>
-        <div class="form-group">
-            <label for="reference">Date:</label>
-            <div class="input-group date" data-provide="datepicker">
-                <input type="text" class="form-control">
-                <div class="input-group-addon">
-                    <span class="glyphicon glyphicon-th"></span>
+        <div id="general-info" class="container-fluid">
+            <div id="general-first">
+                <div class="form-group">
+                    <label for="companySelect">Company:</label>
+                    <select class="form-control" id="companySelect">
+                        {% for company in company_options %}
+                        <option>{{ company }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="reference">Reference #:</label>
+                    <input type="text" class="form-control" id="reference" placeholder="">
                 </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label for="description">Description:</label>
-            <input type="text" class="form-control" id="description" placeholder="">
+            <div id="general-second">
+                <div class="form-group">
+                    <label for="reference">Date:</label>
+                    <div class="input-group date" data-provide="datepicker">
+                        <input type="text" class="form-control">
+                        <div class="input-group-addon">
+                            <span class="glyphicon glyphicon-th"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="description">Description:</label>
+                    <input type="text" class="form-control" id="description" placeholder="">
+                </div>
+            </div>
         </div>
         <div class="form-group">
             <table class="table" id="form-table">
@@ -39,10 +45,11 @@
                         <th scope="col">Discount</th>
                         <th scope="col">Amount</th>
                         <th scope="col">Hidden</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr id="row-1">
+                    <tr>
                         <th scope="row">1</th>
                         <td class="description-column">
                             <div class="form-group">
@@ -55,30 +62,39 @@
                         </td>
                         <td class="qty-column">
                             <div class="form-group">
-                                <input type="number" class="form-control" id="qty" placeholder="Qty" min="0" step="1">
+                                <input type="number" class="form-control qty" placeholder="Qty" min="0" step="1">
                             </div>
                         </td>
                         <td class="price-column">
                             <div class="form-group">
-                                <input type="number" class="form-control" id="price" min="0.01">
+                                <input type="number" class="form-control price" min="0.01" placeholder="Price">
                             </div>
                         </td>
                         <td class="discount-column">
                             <div class="form-group">
-                                <input type="number" class="form-control" id="discount" placeholder="0" min="0.01" max="99.99">
+                                <input type="number" class="form-control discount" id="discount" placeholder="%" min="0.01" max="99.99">
                             </div>
-                            <div>%</div>
+                            <!-- <div>%</div> -->
                         </td>
-                        <td class="amount-column"></td>
-                        <td class="hidden-column">
+                        <td class="amount-column">
+                            <div class="amount"></div>
+                        </td>
+                        <td class="hiddenCheck-column">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="hiddenCheck">
+                                <input class="form-check-input hiddenCheck" type="checkbox" value="">
+                            </div>
+                        </td>
+                        <td class="deleteRow-column">
+                            <div class="form-check">
+                                <button class="btn btn-danger deleteRowButton" type="button">x</button>
                             </div>
                         </td>
                     </tr>
                 </tbody>
             </table>
-            <button id="new-item">Add new item</button>
+            <div>
+                <button type="button" class="btn btn-primary" id="new-item">Add new item</buttont>
+            </div>
         </div>
         
     </form>
