--- a/personalcrm/quote/static/quote/css/main.css
+++ b/personalcrm/quote/static/quote/css/main.css
@@ -1,10 +1,26 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin-bottom: 2rem;
+}
+
+#termsAndTotals {
+  display: flex;
+}
+
+.total-row {
+  display: flex;
+}
+
 .discount-column {
   /* display: flex;
   height: max-content;
   vertical-align: middle; */
 }
 
-#general-info {
+/* #general-info {
   display: flex;
   flex-wrap: wrap;
-}
+} */
