--- a/personalcrm/quote/templates/quote/create-quote.html
+++ b/personalcrm/quote/templates/quote/create-quote.html
@@ -3,23 +3,23 @@
 {% block body %}
     <h1>Create Quote</h1>
     <form id="new-quote-form" action="" method="post">
-        <div id="general-info" class="container-fluid">
-            <div id="general-first">
+        <div id="general-info" class="form-control container-fluid">
+            <!-- <div id="general-first"> -->
                 <div class="form-group">
-                    <label for="companySelect">Company:</label>
-                    <select class="form-select" id="companySelect">
-                        <option selected>Select company</option>
+                    <label class="form-label" for="companyOptions">Customer:</label>
+                    <input class="form-control" list="companyOptions" placeholder="Type customer">
+                    <datalist id="companyOptions">
                         {% for company in company_options %}
                         <option>{{ company }}</option>
                         {% endfor %}
-                    </select>
+                    </datalist>
                 </div>
                 <div class="form-group">
                     <label for="reference">Reference #:</label>
                     <input type="text" class="form-control" id="reference" placeholder="">
                 </div>
-            </div>
-            <div id="general-second">
+            <!-- </div> -->
+            <!-- <div id="general-second"> -->
                 <div class="form-group">
                     <label for="reference">Date:</label>
                     <div class="input-group date" data-provide="datepicker">
@@ -33,9 +33,9 @@
                     <label for="description">Description:</label>
                     <input type="text" class="form-control" id="description" placeholder="">
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
-        <div class="form-group">
+        <div class="product-info">
             <table class="table" id="form-table">
                 <thead>
                     <tr>
@@ -53,15 +53,14 @@
                     <tr>
                         <th scope="row">1</th>
                         <td class="description-column">
-                            <div class="form-group">
-                                <select class="form-select product-select">
-                                    <option selected>Select product</option>
+                            <input class="form-control product-options" list="product-options" id="productDataList" placeholder="Product">
+                                <datalist id="product-options">
                                     {% for product in product_options %}
                                     <option>{{ product }}</option>
                                     {% endfor %}
-                                </select>
-                                <label class="product-title"></label>
-                                <label class="product-brand"></label>
+                                </datalist>
+                                <h6 class="product-title"></h6>
+                                <p class="product-brand"></p>
                                 <textarea class="form-control product-description" name="product-description" id="" cols="30" rows="5"></textarea>
                             </div>
                         </td>
@@ -101,6 +100,59 @@
                 <button type="button" class="btn btn-primary" id="new-item">Add new item</buttont>
             </div>
         </div>
-        
+        <div class="form-control" id="termsAndTotals">
+            <div class="terms">
+                <label for="terms" class="form-label">Terms & conditions</label>
+                <textarea class="form-control "name="terms" id="terms" cols="30" rows="5"></textarea>
+            </div>
+            <div class="totals">
+                <div class="total-row" id="subtotal-row">
+                    <div class="total-label">
+                        Subtotal
+                    </div>
+                    <div class="total-amount" id="subtotal-amount">
+                        0.00
+                    </div>
+                </div>
+                <div class="total-row" id="shiping-row">
+                    <div class="total-label">
+                        Shipping Charges
+                    </div>
+                    <div class="form-group">
+                        <input type="number" id="shipping-input" class="form-control shipping" min="0.01">
+                    </div>
+                    <div class="total-amount" id="shipping-amount">
+                        0.00
+                    </div>
+                </div>
+                <div class="total-row" id="tax-row">
+                    <div class="total-label">
+                        Tax
+                    </div>
+                    <div class="form-group">
+                        <input type="number" class="form-control tax" id="tax-input" placeholder="%" min="0.01" max="99.99">
+                    </div>
+                    <div class="total-amount" id="tax-amount">
+                        0.00
+                    </div>
+                </div>
+                <div class="total-row" id="total-row">
+                    <div class="total-label">
+                        Total
+                    </div>
+                    <div class="total-amount" id="total-amount">
+                        0.00
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-control" id="notes">
+            <div class="terms">
+                <label for="internal-notes" class="form-label">Notes</label>
+                <textarea class="form-control "name="internal-notes" id="internal-notes" cols="30" rows="5" placeholder="Notes for your personal user, they are not going to appear in quote"></textarea>
+            </div>
+        </div>
+        <button type="button" class="btn btn-outline-primary">Preview Quote</button>
+        <button type="submit" class="btn btn-primary">Create Quote</button>
     </form>
 {% endblock body %}
