optimize adding new line, changed hidden checkbox for dropdown

--- a/personalcrm/quote/static/quote/css/main.css
+++ b/personalcrm/quote/static/quote/css/main.css
@@ -6,6 +6,13 @@ body {
   margin-bottom: 2rem;
 }
 
+.form-label {
+  margin-bottom: 0;
+}
+
+#generalInfo-flex {
+}
+
 #termsAndTotals {
   display: flex;
 }
