--- a/personalcrm/quote/templates/quote/layout.html
+++ b/personalcrm/quote/templates/quote/layout.html
@@ -69,9 +69,10 @@
     <div class="container">
         {% block body %}{% endblock body %}
     </div>
-    
+ 
     <footer>
     </footer>
+   
     <!-- Bootstrap Script -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
@@ -80,7 +81,7 @@
 
    
     <!-- Own script -->
-    <script src="{% static 'quote/js/main.js' %}"></script>
+    <script id="mainjs" src="{% static 'quote/js/main.js' %}"></script>
     <script src="{% static 'quote/js/accounting.js' %}"></script>
 
   </body>
