added links to quote in ID column, fixed background issue in thead when printing

--- a/personalcrm/quote/templates/quote/index.html
+++ b/personalcrm/quote/templates/quote/index.html
@@ -7,10 +7,11 @@
         data-toggle="table"
         data-url="quote-index"
         data-pagination="true"
-        data-search="true">
+        data-search="true"
+        id="index-table">
         <thead>
           <tr>
-            <th data-field="id" data-sortable="true">ID</th>
+            <th data-field="id" data-sortable="true" data-formatter="LinkFormatter">ID</th>
             <th data-field="customer" data-sortable="true">Customer</th>
             <th data-field="description">Description</th>
             <th data-field="reference">Reference</th>
