--- a/personalcrm/quote/templates/quote/layout.html
+++ b/personalcrm/quote/templates/quote/layout.html
@@ -37,14 +37,14 @@
                 <a class="nav-link" href="{% url 'quote-home' %}">Quotes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Inventory</a>
+                <!-- <a class="nav-link" href="#">Inventory</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Companies</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contacts</a>
-              </li>
+              </li> -->
               {% if user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" href="#">Sign Out</a>
