--- a/personalcrm/quote/templates/quote/layout.html
+++ b/personalcrm/quote/templates/quote/layout.html
@@ -51,7 +51,7 @@
                 </li>
               {% else %}
               <li class="nav-item">
-                  <a class="nav-link" href="#">Sign In</a>
+                  <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Sign Up</a>
