--- a/personalcrm/quote/templates/quote/view-quote.html
+++ b/personalcrm/quote/templates/quote/view-quote.html
@@ -27,7 +27,8 @@
             <p>Customer: <strong>{{quote.company.name}}</strong></p>
             <p class="customer-details">ID: {{quote.company.legal_id}}</p>
             <p class="customer-details">Address: {{quote.company.address}}. {{quote.company.city}}, {{quote.company.state}}</p>
-            <p class="customer-details">Description: {{quote.description}} | Reference: {{quote.reference}}</p>
+            <p class="customer-details">Description: {{quote.description}}</p> 
+            <p class="customer-details">Reference: {{quote.reference}}</p>
         </div>
     </div>
     <div class="customer-info-right">
