--- a/personalcrm/quote/templates/quote/index.html
+++ b/personalcrm/quote/templates/quote/index.html
@@ -1,8 +1,10 @@
 {% extends 'quote/layout.html' %}
 
 {% block body %}
-    <h1>Quote Index</h1>
-    <button type="button "id="new_quote_button" class="btn btn-primary">New Quote</button>
+    <div class="index-title">
+      <h1>Quote Index</h1>
+      <button type="button "id="new_quote_button" class="btn crm-button">New Quote</button>
+    </div>
     <table 
         data-toggle="table"
         data-url="quote-index"
