--- a/personalcrm/quote/templates/quote/view-quote.html
+++ b/personalcrm/quote/templates/quote/view-quote.html
@@ -4,103 +4,104 @@
 
 
 {% block body %}
+<div class="view-quote-body">
+    <div class="company-info">
+        <div class="general-info-left">
+            <img src="{% static 'quote/img/logo/my-company-logo.png' %}" alt="Logo-IFC" width="150px">
+        </div>
+        <div class="general-info-right">
+            <div>
+                <h6><strong>{{company.name}}</strong></h6>
+                <p class="company-details">ID: {{company.legal_id}}</p>
+                <p class="company-details">{{company.address}}.</p>
+                <p class="company-details">{{company.city}}, {{company.state}}.</p>
+                <p class="company-details">T. {{company.phone}}</p>
+                <h4 id="quote-id">Quote #{{ quote.pk }}</h4>
 
-<div class="company-info">
-    <div class="general-info-left">
-        <img src="{% static 'quote/img/logo/my-company-logo.png' %}" alt="Logo-IFC" width="150px">
-    </div>
-    <div class="general-info-right">
-        <div>
-            <h6><strong>{{company.name}}</strong></h6>
-            <p class="company-details">ID: {{company.legal_id}}</p>
-            <p class="company-details">{{company.address}}.</p>
-            <p class="company-details">{{company.city}}, {{company.state}}.</p>
-            <p class="company-details">T. {{company.phone}}</p>
-            <h4 id="quote-id">Quote #{{ quote.pk }}</h4>
-
+            </div>
         </div>
     </div>
-</div>
-<div class="customer-info">
-    <div class="customer-info-left">
-        <div>
-            <p>Customer: <strong>{{quote.company.name}}</strong></p>
-            <p class="customer-details">ID: {{quote.company.legal_id}}</p>
-            <p class="customer-details">Address: {{quote.company.address}}. {{quote.company.city}}, {{quote.company.state}}</p>
-            <p class="customer-details">Description: {{quote.description}}</p> 
-            <p class="customer-details">Reference: {{quote.reference}}</p>
+    <div class="customer-info">
+        <div class="customer-info-left">
+            <div>
+                <p>Customer: <strong>{{quote.company.name}}</strong></p>
+                <p class="customer-details">ID: {{quote.company.legal_id}}</p>
+                <p class="customer-details">Address: {{quote.company.address}}. {{quote.company.city}}, {{quote.company.state}}</p>
+                <p class="customer-details">Description: {{quote.description}}</p> 
+                <p class="customer-details">Reference: {{quote.reference}}</p>
+            </div>
+        </div>
+        <div class="customer-info-right">
+            <div>
+                <p>Date: {{quote.creation_date}}</p>
+                <p>Sales Representative: {{quote.creator.first_name}} {{quote.creator.last_name}}</p>
+            </div>
         </div>
     </div>
-    <div class="customer-info-right">
-        <div>
-            <p>Date: {{quote.creation_date}}</p>
-            <p>Sales Representative: {{quote.creator.first_name}} {{quote.creator.last_name}}</p>
+    <table class='table'>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Description</th>
+                <th>Qty</th>
+                <th>Price</th>
+                <th>Discount</th>
+                <th>Total</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for product in products %}
+                {% if product.hidden %}
+                    <tr class="product-row" hidden>
+                        <th></th>
+                        <td class="row-description">
+                            <div>{{ product.title }}</div>
+                            <div>{{ product.description|linebreaks }}</div>
+                        </td>
+                        <td class='qty'>{{product.qty}}</td>
+                        <td class='price'>{{product.price}}</td>
+                        <td class='discount'>{{product.discount}}</td>
+                        <td>
+                            <div class="amount"></div>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr class="product-row">
+                        <th class="row-number"></th>
+                        <td class="row-description">
+                            <div>{{ product.title }}</div>
+                            <div>{{ product.description|linebreaks }}</div>
+                        </td>
+                        <td class='qty'>{{product.qty}}</td>
+                        <td class='price'>{{product.price}}</td>
+                        <td class='discount'>{{product.discount}}</td>
+                        <td>
+                            <div class="amount"></div>
+                        </td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </tbody>
+    </table>
+    <div class="terms-and-total">
+        <div class="terms">
+            <div><strong>Terms & Conditions:</strong></div>
+            <div>{{quote.terms|linebreaks}}</div>
         </div>
-    </div>
-</div>
-<table class='table'>
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Description</th>
-            <th>Qty</th>
-            <th>Price</th>
-            <th>Discount</th>
-            <th>Total</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for product in products %}
-            {% if product.hidden %}
-                <tr class="product-row" hidden>
-                    <th></th>
-                    <td class="row-description">
-                        <div>{{ product.title }}</div>
-                        <div>{{ product.description|linebreaks }}</div>
-                    </td>
-                    <td class='qty'>{{product.qty}}</td>
-                    <td class='price'>{{product.price}}</td>
-                    <td class='discount'>{{product.discount}}</td>
-                    <td>
-                        <div class="amount"></div>
-                    </td>
-                </tr>
-            {% else %}
-                <tr class="product-row">
-                    <th class="row-number"></th>
-                    <td class="row-description">
-                        <div>{{ product.title }}</div>
-                        <div>{{ product.description|linebreaks }}</div>
-                    </td>
-                    <td class='qty'>{{product.qty}}</td>
-                    <td class='price'>{{product.price}}</td>
-                    <td class='discount'>{{product.discount}}</td>
-                    <td>
-                        <div class="amount"></div>
-                    </td>
-                </tr>
-            {% endif %}
-        {% endfor %}
-    </tbody>
-</table>
-<div class="terms-and-total">
-    <div class="terms">
-        <div><strong>Terms & Conditions:</strong></div>
-        <div>{{quote.terms|linebreaks}}</div>
-    </div>
-    <div class="totals">
-        <div class="totaling-div">
-            <div class="total-label">Sub-Total:</div>
-            <div class="total-amount" id="subtotal-amount"></div>
-        </div>
-        <div class="totaling-div">
-            <div class="total-label">Tax ({{quote.tax}}%):</div>
-            <div id="tax-input" hidden>{{quote.tax}}</div>
-            <div class="total-amount" id="tax-amount"></div>
-        </div>
-        <div class="totaling-div">
-            <div class="total-label">Total:</div>
-            <div class="total-amount" id="total-amount"></div>
+        <div class="totals">
+            <div class="totaling-div">
+                <div class="total-label">Sub-Total:</div>
+                <div class="total-amount" id="subtotal-amount"></div>
+            </div>
+            <div class="totaling-div">
+                <div class="total-label">Tax ({{quote.tax}}%):</div>
+                <div id="tax-input" hidden>{{quote.tax}}</div>
+                <div class="total-amount" id="tax-amount"></div>
+            </div>
+            <div class="totaling-div">
+                <div class="total-label">Total:</div>
+                <div class="total-amount" id="total-amount"></div>
+            </div>
         </div>
     </div>
 </div>
