--- a/personalcrm/quote/templates/quote/create-quote.html
+++ b/personalcrm/quote/templates/quote/create-quote.html
@@ -2,7 +2,9 @@
 
 {% block body %}
 <div class="container internal-body">
-    <h1>Create Quote</h1>
+    <div class="title-div">
+        <h1>Create Quote</h1>
+    </div>
     <form id="new-quote-form" action="{% url 'create-quote' %}" method="post">{% csrf_token %}
         <div id="general-info" class="form-control">
             <div id="generalInfo-flex">
@@ -75,17 +77,17 @@
                         </td>
                         <td class="qty-column">
                             <div class="form-group">
-                                <input type="number" class="form-control qty" name="qty" placeholder="Qty" min="0" step="1" value="0">
+                                <input type="number" class="form-control qty" name="qty" placeholder="Qty" min="0" step="1" >
                             </div>
                         </td>
                         <td class="price-column">
                             <div class="form-group">
-                                <input type="number" class="form-control price" name="price" min="0" step="0.01" placeholder="Price" value="0">
+                                <input type="number" class="form-control price" name="price" min="0" step="0.01" placeholder="Price" >
                             </div>
                         </td>
                         <td class="discount-column">
                             <div class="form-group">
-                                <input type="number" class="form-control discount" name="discount" id="discount" placeholder="%" min="0" max="99.99" step="0.01" value="0">
+                                <input type="number" class="form-control discount" name="discount" id="discount" placeholder="%" min="0" max="99.99" step="0.01">
                             </div>
                         </td>
                         <td class="amount-column">
@@ -108,7 +110,7 @@
             </table>
         </div> 
             <div>
-                <button type="button" class="btn btn-primary" id="new-item">Add new item</buttont>
+                <button type="button" class="btn crm-button" id="new-item">Add new item</buttont>
             </div>
         
         <div class="form-control" id="termsAndTotals">
@@ -152,7 +154,7 @@
                 <textarea class="form-control "name="internal-notes" id="internal-notes" cols="30" rows="5" placeholder="Notes for your personal user, they are not going to appear in quote"></textarea>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Create Quote</button>
+        <button type="submit" class="btn crm-button">Create Quote</button>
     </form>
 </div>
 {% endblock body %}
