--- a/personalcrm/quote/templates/quote/layout.html
+++ b/personalcrm/quote/templates/quote/layout.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
+    <!-- Fonts CSS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
     <!-- Own CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'quote/css/main.css' %}">
 
@@ -23,10 +27,10 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-md navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href=#>
-          <img src="{% static 'quote/img/personalcrm-logo.png' %}" alt="">
+        <a class="navbar-brand" href="{% url 'quote-home' %}">
+          <h1 class="nav-title">PersonalCRM</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,9 +41,9 @@
                 <a class="nav-link" href="{% url 'quote-home' %}">Quotes</a>
               </li>
               <li class="nav-item">
-                <!-- <a class="nav-link" href="#">Inventory</a>
+                <a class="nav-link" href="{% url 'inventory-home' %}">Inventory</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Companies</a>
               </li>
               <li class="nav-item">
