--- a/personalcrm/inventory/templates/inventory/index.html
+++ b/personalcrm/inventory/templates/inventory/index.html
@@ -7,17 +7,16 @@
     </div>
     <table 
         data-toggle="table"
-        data-url="quote-index"
+        data-url="inventory-index"
         data-pagination="true"
         data-search="true"
         id="index-table">
         <thead>
           <tr>
-            <th data-field="id" data-sortable="true" data-formatter="LinkFormatter">ID</th>
-            <th data-field="customer" data-sortable="true">Customer</th>
-            <th data-field="description">Description</th>
-            <th data-field="reference">Reference</th>
-            <th data-field="creator">Creator</th>
+            <th data-field="pn" data-sortable="true" data-formatter="LinkFormatter">PN</th>
+            <th data-field="brand" data-sortable="true">Brand</th>
+            <th data-field="title" data-sortable="true">Description</th>
+            <th data-field="stock" data-sortable="true">Stock</th>
           </tr>
         </thead>
       </table>
