company logo added to userCompany model and implemented

--- a/personalcrm/quote/templates/quote/view-quote.html
+++ b/personalcrm/quote/templates/quote/view-quote.html
@@ -7,7 +7,7 @@
 <div class="view-quote-body">
     <div class="company-info">
         <div class="general-info-left">
-            <img src="{% static 'quote/img/logo/my-company-logo.png' %}" alt="Logo-IFC" width="150px">
+            <img src="{{ company.logo.url }}" alt="company-logo" width="150px">
         </div>
         <div class="general-info-right">
             <div>
